[tool.poetry]
name = "langflow-deployment"
version = "1.4.1"
description = "LangFlow deployment using official PyPI version"
authors = ["wjmontague"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/langflow-ai/langflow"
documentation = "https://docs.langflow.org"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langflow = "1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
